--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -15,6 +16,8 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: 24px;
+    font-weight: bolder;
 }
 
 .score {
@@ -23,6 +26,18 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 128px 32px 128px;
+    color: white;
+    font-size: 48px;
+    font-weight: bolder;
 }
 
 .options {
